# metapipe

./: .buildinfo  .gitignore  Makefile  README.md  index.html  nodes.py  objects.inv  params_tree.py  pyproject.toml  raw_processors.py  search.html  searchindex.js  setup.py  test_nodes.py  test_params_tree.py  test_raw_processors.py
_sources/: index.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
html/: genindex.html  index.html  searchindex.js
html/_sources/: index.rst.txt
metapipe/: abc.py  backup.py  bp_template.py  file_processors.py  inmemo_processors.py  interfaces.py  io.py  nodes.py  observer.py  params_tree.py  processors.py  raw_processors.py  utils.py
metapipe/tests/: test_abc.py  test_backup_cmd.py  test_file_processors.py  test_inmemo_processors.py  test_interfaces.py  test_io.py  test_nodes.py  test_observer.py  test_params_tree.py  test_processors.py  test_raw_processors.py  test_utils.py
