[tool.poetry]
name = "metapipe"
version = "0.1.0"
description = ""
authors = ["Dmitrii Altukhov <dm.altukhov@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
mne = "^0.24.1"
mne-bids = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
ipython = "^8.0.1"
pytest-sugar = "^0.9.4"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
